# boxing-trainer-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/toolchains/: homebrew-llvm-toolchain.cmake  vcpkg-from-env.cmake
resources/: combinations.txt
src/: common.cppm  main.cpp  text.cppm
src/combo/: combo.cpp  combo.cppm
src/model/: model.cpp  model.cppm
src/view/: app.cpp  app.cppm  video_url.cpp  video_url.cppm
tests/: test_main.cpp
vcpkg-triplets/: arm64-osx-homebrew-llvm.cmake
